link to new page

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -98,6 +98,11 @@
                                 <a class="item" (click)="FlagNotN()">-รายที่ไม่อยู่ในเงื่อนไข</a>
                             </div>
                         </div>
+                        <div class="item">
+                            <div class="menu">
+                                <a class="item" routerLink="/send-line-user">-กดส่งรายให้ภาคพื้นที่</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
