--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -13,7 +13,16 @@
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-                        <input value="{{analysNumber}}" readonly="" class="custom-readonly">
+                        <select
+                            class="ui dropdown"
+                            name="analysNumbers"
+                            id="analysNumbers"
+                            [(ngModel)]="analysNumber"
+                            (change)="selectAnalysNumbers()"
+                            *ngIf="analysNumberArr !== ''">
+                            <option *ngFor="let list of analysNumberArr" ng-value="list">{{list}}</option>
+                        </select>
+                        <input value="{{analysNumber}}" readonly="" *ngIf="analysNumberArr === ''" class="custom-readonly">
                     </div>
                 </div>
 
@@ -21,7 +30,7 @@
                     <div class="thirteen wide field">
                         <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="MM/YYYY" value="{{before}}" id="before" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
@@ -30,7 +39,7 @@
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="MM/YYYY" value="{{last}}" id="last" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
@@ -94,8 +103,8 @@
                         </div>
                         <div class="item">
                             <div class="menu">
-                                <a class="item" (click)="FlagN()">-รายที่อยู่ในเงื่อนไข</a>
-                                <a class="item" (click)="FlagNotN()">-รายที่ไม่อยู่ในเงื่อนไข</a>
+                                <a class="item hover {{(flag == 'N' || flag == '') && 'active'}}" (click)="FlagN()">- รายที่อยู่ในเงื่อนไข</a>
+                                <a class="item hover {{flag == 'NOT N' && 'active'}}" (click)="FlagNotN()">- รายที่ไม่อยู่ในเงื่อนไข</a>
                             </div>
                         </div>
                         <div class="item">
