add 'queryWorkSheetNumber' [Backend]

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="eight wide field">&nbsp;&nbsp;&nbsp;
                         <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
-                        <input value="" readonly="" class="custom-readonly">
+                        <input [(ngModel)]="workSheetNumber" readonly="" class="custom-readonly">
                     </div>
                 </div>
 
@@ -109,7 +109,7 @@
                         </div>
                         <div class="item">
                             <div class="menu">
-                                <a class="item" routerLink="/send-line-user">-กดส่งรายให้ภาคพื้นที่</a>
+                                <a class="item" routerLink="/send-line-user">- กดส่งรายให้ภาคพื้นที่</a>
                             </div>
                         </div>
                     </div>
