--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -50,12 +50,13 @@
                     <div class="seven wide field ">
                         <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
                             ค้นหา
-                        </button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        </button>
+                        <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <input type="hidden" id="exciseId" value="EX" />
                         <button id="exciseBtn" class="ui mini primary button" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value+'&num=25610615-01-00330';">
                             <i class="add icon"></i>
                             เพิ่มข้อมูล
-                        </button>
+                        </button> -->
                     </div>
                 </div>
 
