--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -140,11 +140,11 @@
                 </div>
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
-                        <button (click)="onSend();" class="ui mini primary button">
+                        <button type="button" (click)="onSend()" class="ui mini primary button">
                             <i class="add icon"></i>
                             สร้างกระดาษทำการคัดเลือกราย
                         </button>
-                        <button class="ui mini button" routerLink="/trader-selection">
+                        <button type="button" class="ui mini button" routerLink="/trader-selection">
                             <i class="refresh icon"></i>
                             ล้างข้อมูล
                         </button>
