fixed router link [Frontend]

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -11,34 +11,34 @@
         <i class="dropdown icon"></i>
         <div class="menu">
             <div class="ui simple dropdown item">
-                    <i class="dropdown icon"></i> แบบสอบทานระบบการควบคุมภายใน
-                    <div class="menu" style="margin:20px;">
-                            <a class="item" [routerLink]="['/int02-1']" routerLinkActive="active">สร้างแบบสอบทานระบบการควบคุมภายใน</a>
-                            <a class="item"  routerLinkActive="active">สร้างแบแบบสอบทานระบบการควบคุมภายใน (หน่วยงาน)บสอบทานระบบการควบคุมภายใน</a>
-                            <a class="item"  routerLinkActive="active">สรุปผลแบบสอบทานระบบการควบคุมภายใน</a>
-                            <a class="item"  routerLinkActive="active">จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</a>
-                    </div>
+                <i class="dropdown icon"></i> แบบสอบทานระบบการควบคุมภายใน
+                <div class="menu" style="margin:20px;">
+                    <a class="item" [routerLink]="['/int02/1']" routerLinkActive="active">สร้างแบบสอบทานระบบการควบคุมภายใน</a>
+                    <a class="item" routerLinkActive="active">สร้างแบแบบสอบทานระบบการควบคุมภายใน (หน่วยงาน)บสอบทานระบบการควบคุมภายใน</a>
+                    <a class="item" routerLinkActive="active">สรุปผลแบบสอบทานระบบการควบคุมภายใน</a>
+                    <a class="item" routerLinkActive="active">จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</a>
+                </div>
             </div>
             <div class="ui simple dropdown item">
                 <i class="dropdown icon"></i> ประเมินความเสี่ยง
                 <div class="menu" style="margin:20px;">
-                    <a class="item" [routerLink]="['/int08-1-1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
+                    <a class="item" [routerLink]="['/int08/1/1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
                     <div class="ui dropdown item" routerLinkActive="active">
                         <i class="dropdown icon"></i>ประเมินความเสี่ยงระบบสารสนเทศหลักของกรม
                         <div class="menu">
-                            <a class="item" [routerLink]="['/int08-2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ (จำนวนครั้งที่ระบบใช้งานไม่ได้)</a>
-                            <a class="item" [routerLink]="['/int08-2-1']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ (ร้อยละความเห็น)</a>
+                            <a class="item" [routerLink]="['/int08/2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ (จำนวนครั้งที่ระบบใช้งานไม่ได้)</a>
+                            <a class="item" [routerLink]="['/int08/2/1']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ (ร้อยละความเห็น)</a>
                         </div>
                     </div>
                     <div class="ui dropdown item" routerLinkActive="active">
                         <i class="dropdown icon"></i>ประเมินความเสี่ยงภาคพื้นที่
                         <div class="menu">
-                            <a class="item" [routerLink]="['/int08-3-1']" routerLinkActive="active">ประเมินความเสี่ยงความถี่การตรวจ</a>
-                            <a class="item" [routerLink]="['/int08-3-2']" routerLinkActive="active">ประเมินความเสี่ยงผลการจัดเก็บรายได้</a>
-                            <a class="item" [routerLink]="['/int08-3-3-1']" routerLinkActive="active">ประเมินความเสี่ยงผลการปราบปราม</a>
-                            <a class="item" [routerLink]="['/int08-3-4']" routerLinkActive="active">ประเมินความเสี่ยงการเงินและบัญชี</a>
-                            <a class="item" [routerLink]="['/int08-3-5']" routerLinkActive="active">ประเมินความเสี่ยงระบบควบคุมภายใน</a>
-                            <a class="item" [routerLink]="['/int08-3-6']" routerLinkActive="active">ประเมินความเสี่ยงภาคพื้นที่รวม</a>
+                            <a class="item" [routerLink]="['/int08/3/1']" routerLinkActive="active">ประเมินความเสี่ยงความถี่การตรวจ</a>
+                            <a class="item" [routerLink]="['/int08/3/2']" routerLinkActive="active">ประเมินความเสี่ยงผลการจัดเก็บรายได้</a>
+                            <a class="item" [routerLink]="['/int08/3/3/1']" routerLinkActive="active">ประเมินความเสี่ยงผลการปราบปราม</a>
+                            <a class="item" [routerLink]="['/int08/3/4']" routerLinkActive="active">ประเมินความเสี่ยงการเงินและบัญชี</a>
+                            <a class="item" [routerLink]="['/int08/3/5']" routerLinkActive="active">ประเมินความเสี่ยงระบบควบคุมภายใน</a>
+                            <a class="item" [routerLink]="['/int08/3/6']" routerLinkActive="active">ประเมินความเสี่ยงภาคพื้นที่รวม</a>
                         </div>
                     </div>
                 </div>
@@ -46,13 +46,13 @@
             <div class="ui dropdown item">
                 <i class="dropdown icon"></i> ตรวจสอบรายได้
                 <div class="menu">
-                    <a class="item" [routerLink]="['/int01-1-1']" routerLinkActive="active" style=" color:White ">สร้างกระดาษทำการภาษีสรรพสามิต</a>
-                    <a class="item" [routerLink]="['/int01-2-1']" routerLinkActive="active" style=" color:White ">สร้างกระดาษทำการใบอนุญาต สุรา ยาสูบ ไพ่</a>
-                    <a class="item" [routerLink]="['/int01-3-1']" routerLinkActive="active" style=" color:White ">สร้างกระดาษทำการค่าปรับเปรียบเทียบคดี</a>
-                    <a class="item" [routerLink]="['/int01-4-1']" routerLinkActive="active" style=" color:White ">ตรวจสอบเปรียบเทียบงบทดลองกับงบสรุปยอดเงินค่าภาษี</a>
-                    <a class="item" [routerLink]="['/int01-5-1']" routerLinkActive="active" style=" color:White ">ตรวจสอบสถิติการชำระภาษี</a>
-                    <a class="item" [routerLink]="['/int01-6-1']" routerLinkActive="active" style=" color:White ">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
-                    <a class="item" [routerLink]="['/int01-7-1']" routerLinkActive="active" style=" color:White ">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
+                    <a class="item" [routerLink]="['/int01/1/1']" routerLinkActive="active" style=" color:White ">สร้างกระดาษทำการภาษีสรรพสามิต</a>
+                    <a class="item" [routerLink]="['/int01/2/1']" routerLinkActive="active" style=" color:White ">สร้างกระดาษทำการใบอนุญาต สุรา ยาสูบ ไพ่</a>
+                    <a class="item" [routerLink]="['/int01/3/1']" routerLinkActive="active" style=" color:White ">สร้างกระดาษทำการค่าปรับเปรียบเทียบคดี</a>
+                    <a class="item" [routerLink]="['/int01/4/1']" routerLinkActive="active" style=" color:White ">ตรวจสอบเปรียบเทียบงบทดลองกับงบสรุปยอดเงินค่าภาษี</a>
+                    <a class="item" [routerLink]="['/int01/5/1']" routerLinkActive="active" style=" color:White ">ตรวจสอบสถิติการชำระภาษี</a>
+                    <a class="item" [routerLink]="['/int01/6/1']" routerLinkActive="active" style=" color:White ">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
+                    <a class="item" [routerLink]="['/int01/7/1']" routerLinkActive="active" style=" color:White ">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
                 </div>
             </div>
             <div class="ui simple dropdown item">
@@ -61,39 +61,39 @@
                     <div class="ui dropdown item" routerLinkActive="active">
                         <i class="dropdown icon"></i> ตรวจสอบแสตมป์
                         <div class="menu">
-                            <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">ตรวจแสตมป์พื้นที่</a>
-                            <a class="item" [routerLink]="['/int05-2']" routerLinkActive="active">ตรวจแสตมป์พื้นที่ สาขา </a>
+                            <a class="item" [routerLink]="['/int05/1']" routerLinkActive="active">ตรวจแสตมป์พื้นที่</a>
+                            <a class="item" [routerLink]="['/int05/2']" routerLinkActive="active">ตรวจแสตมป์พื้นที่ สาขา </a>
                         </div>
                     </div>
-                    <a class="item" [routerLink]="['/int05-3']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
-                    <a class="item" [routerLink]="['/int05-4']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                    <a class="item" [routerLink]="['/int05/3']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
+                    <a class="item" [routerLink]="['/int05/4']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
                 </div>
             </div>
             <div class="ui simple dropdown item">
                 <i class="dropdown icon"></i> ตรวจสอบบัญชี
                 <div class="menu">
-                    <a class="item" [routerLink]="['/int07-1']" routerLinkActive="active">นำเข้าเอกสาร</a>
-                    <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชียอดยกไป</a>
-                    <a class="item" [routerLink]="['/int07-3']" routerLinkActive="active">ตรวจสอบข้อมูลบัญชี </a>
-                    <a class="item" [routerLink]="['/int07-4']" routerLinkActive="active">ตรวจสอบงบทดลองกระทบยอด 4 บัญชีแยกประเภท </a>
-                    <a class="item" [routerLink]="['/int07-5']" routerLinkActive="active">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง </a>
-                    <a class="item" [routerLink]="['/int07-6']" routerLinkActive="active">ตรวจการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>
-                    <a class="item" [routerLink]="['/int07-7']" routerLinkActive="active">รายงานเคลื่อนไหวเงินฝากคลัง </a>
+                    <a class="item" [routerLink]="['/int07/1']" routerLinkActive="active">นำเข้าเอกสาร</a>
+                    <a class="item" [routerLink]="['/int07/2']" routerLinkActive="active">ตรวจสอบดุลบัญชียอดยกไป</a>
+                    <a class="item" [routerLink]="['/int07/3']" routerLinkActive="active">ตรวจสอบข้อมูลบัญชี </a>
+                    <a class="item" [routerLink]="['/int07/4']" routerLinkActive="active">ตรวจสอบงบทดลองกระทบยอด 4 บัญชีแยกประเภท </a>
+                    <a class="item" [routerLink]="['/int07/5']" routerLinkActive="active">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง </a>
+                    <a class="item" [routerLink]="['/int07/6']" routerLinkActive="active">ตรวจการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>
+                    <a class="item" [routerLink]="['/int07/7']" routerLinkActive="active">รายงานเคลื่อนไหวเงินฝากคลัง </a>
                 </div>
             </div>
             <div class="ui simple dropdown item">
                 <i class="dropdown icon"></i> ตรวจสอบเบิกจ่าย
                 <div class="menu">
-                    <a class="item" [routerLink]="['/int06-1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
-                    <a class="item" [routerLink]="['/int06-2']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
-                    <a class="item" [routerLink]="['/int06-3']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
-                    <a class="item" [routerLink]="['/int06-4']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
-                    <a class="item" [routerLink]="['/int06-5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
-                    <a class="item" [routerLink]="['/int06-6']" routerLinkActive="active">ตรวจการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
+                    <a class="item" [routerLink]="['/int06/1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
+                    <a class="item" [routerLink]="['/int06/2']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
+                    <a class="item" [routerLink]="['/int06/3']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
+                    <a class="item" [routerLink]="['/int06/4']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
+                    <a class="item" [routerLink]="['/int06/5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
+                    <a class="item" [routerLink]="['/int06/6']" routerLinkActive="active">ตรวจการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
                 </div>
             </div>
-            <a class="item" [routerLink]="['/int01-8-1']" style="color: #000;">ค้นหากระดาษทำการ</a>
-            <a class="item" [routerLink]="['/int09-1']" style="color: #000;">ประมาณการค่าใช้จ่ายในการเดินทางไปราชการ
+            <a class="item" [routerLink]="['/int01/8/1']" routerLinkActive="active" style="color: #000;">ค้นหากระดาษทำการ</a>
+            <a class="item" [routerLink]="['/int09/1']" routerLinkActive="active" style="color: #000;">ประมาณการค่าใช้จ่ายในการเดินทางไปราชการ
             </a>
         </div>
     </div>
@@ -136,14 +136,14 @@
         ตรวจปฏิบัติการ
         <i class="dropdown icon"></i>
         <div class="menu">
-            <a class="item" [routerLink]="['/cop01-1']" routerLinkActive="active">จัดทำแผนการตรวจปฏิบัติการ </a>
-            <a class="item" [routerLink]="['/cop01-2']" routerLinkActive="active">ค้นหาแผนการตรวจสอบภาษี </a>
-            <a class="item" [routerLink]="['/cop02-1']" routerLinkActive="active">รวบรวมข้อมูลเพื่อเตรียมออกตรวจปฏิบัติการ </a>
-            <a class="item" [routerLink]="['/cop03-1']" routerLinkActive="active">จัดทำหนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ</a>
-            <a class="item" [routerLink]="['/cop03-1-1']" routerLinkActive="active">ค้นหาหนังสือขออนนุมัติเดินทางไปราชการ </a>
-            <a class="item" [routerLink]="['/cop04-1']" routerLinkActive="active">บันทึกผลการตรวจปฏิบัติการ </a>
-            <a class="item" [routerLink]="['/cop04-2']" routerLinkActive="active">ค้นหาบันทึกผลการตรวจปฏิบัติการ </a>
-            <a class="item" [routerLink]="['/cop05-1']" routerLinkActive="active">รายงานผลการตรวจปฏิบัติการ </a>
+            <a class="item" [routerLink]="['/cop01/1']" routerLinkActive="active">จัดทำแผนการตรวจปฏิบัติการ </a>
+            <a class="item" [routerLink]="['/cop01/2']" routerLinkActive="active">ค้นหาแผนการตรวจสอบภาษี </a>
+            <a class="item" [routerLink]="['/cop02/1']" routerLinkActive="active">รวบรวมข้อมูลเพื่อเตรียมออกตรวจปฏิบัติการ </a>
+            <a class="item" [routerLink]="['/cop03/1']" routerLinkActive="active">จัดทำหนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ</a>
+            <a class="item" [routerLink]="['/cop03/1/1']" routerLinkActive="active">ค้นหาหนังสือขออนนุมัติเดินทางไปราชการ </a>
+            <a class="item" [routerLink]="['/cop04/1']" routerLinkActive="active">บันทึกผลการตรวจปฏิบัติการ </a>
+            <a class="item" [routerLink]="['/cop04/2']" routerLinkActive="active">ค้นหาบันทึกผลการตรวจปฏิบัติการ </a>
+            <a class="item" [routerLink]="['/cop05/1']" routerLinkActive="active">รายงานผลการตรวจปฏิบัติการ </a>
 
         </div>
     </div>
@@ -151,8 +151,8 @@
         ระบบตรวจส่งออก
         <i class="dropdown icon"></i>
         <div class="menu">
-            <a class="item" [routerLink]="['/epa01-1']" routerLinkActive="active">จัดการข้อมูลต้นทาง </a>
-            <a class="item" [routerLink]="['/epa02-1']" routerLinkActive="active">จัดการข้อมูลปายทาง</a>
+            <a class="item" [routerLink]="['/epa01/1']" routerLinkActive="active">จัดการข้อมูลต้นทาง </a>
+            <a class="item" [routerLink]="['/epa02/1']" routerLinkActive="active">จัดการข้อมูลปายทาง</a>
         </div>
     </div>
 
@@ -167,7 +167,7 @@
                 <div class="menu">
                     <a class="item" [routerLink]="['/report/tax']" routerLinkActive="active">รายงานผลการตรวจสอบภาษี</a>
                     <a class="item" [routerLink]="['/report/int']" routerLinkActive="active">รายงานผลการตรวจสอบภายใน </a>
-                    <a class="item" [routerLink]="['/report/out']" routerLinkActive="active">รายงานผลการตรวจส่งออก  </a>
+                    <a class="item" [routerLink]="['/report/out']" routerLinkActive="active">รายงานผลการตรวจส่งออก </a>
                     <a class="item" [routerLink]="['/report/opt']" routerLinkActive="active">รายงานผลการตรวจปฏิบัติการ</a>
                 </div>
             </div>
