--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -42,7 +42,7 @@
               <i class="delete icon"></i>
               ล้างข้อมูล
             </button>
-            <button type="button" style="margin-left: auto" class="ui mini primary button right floated" [routerLink]="['/int02-2']">
+            <button type="button" style="margin-left: auto" class="ui mini primary button right floated" [routerLink]="['/int02/2']">
               <i class="add icon"></i>
               สร้าง
             </button>
