--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="eight wide field">&nbsp;&nbsp;&nbsp;
                         <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
-                        <input value="" readonly="" class="custom-readonly">
+                        <input readonly="" value="{{workSheetNumber}}" class="custom-readonly">
                     </div>
                 </div>
 
@@ -85,70 +85,35 @@
                     </div>
                 </div>
             </div>
+            <form ngNativeValidate (submit)="onSend($event)">
+                <div class="ui grid">
+                    <div class="sixteen wide column">
+                        <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
+                            <table id="sendLineUser" class="ui small celled table aligned hover" style="width: 5000px;">
+                                <thead id="trDrinamic">
 
-            <div class="ui grid">
-                <div class="sixteen wide column">
-                    <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-                        <table id="sendLineUser" class="ui small celled table aligned hover" style="width: 5000px;">
-                            <thead id="trDrinamic">
-                                <tr>
-                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">พื้นที่</th>
-                                    <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
-                                    <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
-                                    <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
-                                    <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
-                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
-                                    <th rowspan="2" style="text-align: center !important">พิกัด</th>
-                                    <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
-                                    <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
-                                    <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
-                                </tr>
-                                <tr>
-                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
-                                    <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
-                                    <th style="text-align: center !important">2558</th>
-                                    <th style="text-align: center !important">2559</th>
-                                    <th style="text-align: center !important">2560</th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="ui center aligned grid">
+                    <div class="sixteen wide column">
+                        <button type="submit" class="ui mini primary button">
+                        <i class="add icon"></i>
+                        สร้างกระดาษทำการคัดเลือกราย
+                    </button>
+                        <button type="button" class="ui mini button" routerLink="/add-external-data">
+                        <i class="refresh icon"></i>
+                        ล้างข้อมูล
+                    </button>
                     </div>
                 </div>
-
-            </div>
+            </form>
         </div>
     </div>
 </div>
