--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -226,8 +226,8 @@
         <p></p>
     </div>
     <div class="actions">
-        <div class="ui green mini cancel inverted button">
-            <i class="remove icon"></i> โอเค
+        <div class="ui mini primary button center floated">
+            <i class="remove icon"></i> ปิด
         </div>
     </div>
 </div>
