--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -29,8 +29,8 @@
             </button>
           </div>
           <div class="field">
-            <button type="button" style="margin-left: auto" class="ui mini primary button right floated">
-              <i class="delete icon"></i>
+            <button type="button" style="margin-left: auto" class="ui mini primary button right floated" [routerLink]="['/int02/3']">
+              <i class=" delete icon "></i>
               ลบ
             </button>
           </div>
@@ -39,41 +39,39 @@
       </div>
     </div>
 
-    <div class="ui segment">
+    <div class="ui segment ">
 
-      <div class="ui grid">
+      <div class="ui grid ">
 
         <div class="sixteen wide column ">
 
-          <table id="datatable" class="ui small celled table aligned hover">
+          <table id="datatable " class="ui small celled table aligned hover ">
             <thead>
               <tr>
-                <th style="text-align: center !important"></th>
-                <th style="text-align: center !important">แบบสอบทานด้าน</th>
-                <th style="text-align: center !important">สร้างโดย</th>
-                <th style="text-align: center !important">Action</th>
-
+                <th style="text-align: center !important ">ลำดับ</th>
+                <th style="text-align: center !important ">แบบสอบทานด้าน</th>
+                <th style="text-align: center !important ">สร้างโดย</th>
+                <th style="text-align: center !important ">แก้ไข/ลบ</th>
               </tr>
-
             </thead>
             <tbody>
             </tbody>
           </table>
-          <div class="inline fields">
+          <div class="inline fields ">
 
 
-            <button type="button" style="margin-left: auto" class="ui mini primary button center floated">
-              <i class="angle left icon"></i>
+            <button type="button " style="margin-left: auto " class="ui mini primary button center floated ">
+              <i class="angle left icon "></i>
               กลับ
             </button>
 
 
-            <button type="button" style="margin-left: auto" class="ui mini primary button center floated">
-              <i class="save icon"></i>
+            <button type="button " style="margin-left: auto " class="ui mini primary button center floated ">
+              <i class="save icon "></i>
               ส่งแบบสอบทาน
             </button>
 
-            <div class="inline fields"></div>
+            <div class="inline fields "></div>
 
           </div>
 
